roles and book size on mobile fix

--- a/styles/Books.module.scss
+++ b/styles/Books.module.scss
@@ -37,6 +37,8 @@
         margin-right: 4rem;
         @include small-screen {
           margin-right: 1rem;
+          width: 100px;
+          height: 150px;
         }
       }
     }
