--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -80,7 +80,7 @@
             font-size: 2rem;
             // line-height: 30px;
             @include small-screen {
-              font-size: 1.5rem;
+              font-size: 1rem;
             }
           }
         }
